@@ -1,3 +1,8 @@
+2003-08-26  olicha  <olivier.chapuis@free.fr>
+
+	* links.php:
+	Added a link to the FVWM freshmeat page in a new Miscellaneous section
+
 2003-08-25  Uwe Pross  <uwe.pross@gmx.net>
 
 	* web-theme/themes/against_sw_patents_statement.inc:
